--- a/public/css/rockpaperscissor/room.css
+++ b/public/css/rockpaperscissor/room.css
@@ -1,28 +1,25 @@
-body {
-    background-color: #9b835f;
-    font-family: 'Open Sans',                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           -serif;
+body, html {
+	scroll-behavior: smooth;
+	text-decoration: none !important;
+	font-family: "Open Sans", sans-serif;
+	background-color: #9c835f;
 }
-.logo{
-    width: 3em;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
-    height: auto;
+.customHeader div .d-inline-block {
+	line-height: 2;
 }
-header h3 {
-    margin: 0;
-    color: #d6a046;
+.customHeader a .headerTitle{
+	font-size: 30px;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: #ffc107;
 }
-main h2 {
-    font-size: 3vw;
+.bgColor {
+	height: 100%;
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	background-color: #9c835f;
 }
-.card {
+.room .card {
     background-color: bisque;
-    border-radius: 7%;
-}
-@media screen and (max-width: 400px){
-    header h3{
-        font-size: 18px;
-    }
-    .logo{
-    width: 1.8em;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
-    height: auto;
-    }
 }
